--- a/web/index.html
+++ b/web/index.html
@@ -61,6 +61,9 @@
         <div id="overlay" style="position: absolute; top: 10px; left: 10px; color: #0f0; font-family: monospace; font-weight: bold; text-shadow: 1px 1px 2px black;">
           Waiting for stream...
         </div>
+        <div id="fpsOverlay" style="position: absolute; top: 10px; right: 10px; background: rgba(0, 0, 0, 0.7); padding: 8px 12px; border-radius: 4px; color: #0f0; font-family: monospace; font-size: 18px; font-weight: bold; border: 1px solid rgba(0, 255, 0, 0.3);">
+          FPS: <span id="fpsOverlayValue">0</span>
+        </div>
       </div>
       
       <div class="stats">
